cheking branches differenses

--- a/about.html
+++ b/about.html
@@ -7,13 +7,6 @@
 </head>
 <body>
     <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
+    <h1>I am on local branch now </h1>
 </body>
 </html>
