Master branch Cheking

--- a/about.html
+++ b/about.html
@@ -7,21 +7,6 @@
 </head>
 <body>
     <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-<<<<<<< HEAD
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-    <h2>Helo this is About Page</h2>
-=======
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
-    <p>This is new Paragraph</p>
->>>>>>> local
+    <p>Now i am on master brach</p>
 </body>
 </html>
